Add: services in API + swagger
